# momo-agents

./: .gitignore  CLAUDE.md  README.md  momo-agent-design.html  momo-agent-design.md  orchestrate.sh  pyproject.toml  requirements.txt  reset-team.sh  start-team.sh  status.sh  watchdog.sh
.sentinels/: coding_agent_body.sh  config.sh  run_ba.sh  run_coding_1.sh  run_coding_2.sh  run_designer.sh  run_pi.sh  run_story_reviewer.sh  run_watchdog.sh
agents/: business_analyst.py  designer.py  project_initialiser.py  story_reviewer.py
design/: coding-team-architecture.md
python-agents/: business_analyst.py  coding_agent.py  designer.py  junior_coding_agent.py  project_initialiser.py  senior_coding_agent.py  story_reviewer.py  token_logger.py
roles/: business-analyst.md  coding-agent.md  designer.md  junior-coding-agent.md  project-initialiser.md  senior-coding-agent.md  story-reviewer.md
stories/: STORY-001.done.md  STORY-002.done.md  STORY-003.done.md  STORY-004.done.md  STORY-005.done.md  STORY-006.done.md  STORY-007.done.md  STORY-008.done.md  STORY-009.done.md  STORY-010.done.md  STORY-011.done.md  STORY-012.done.md  STORY-013.done.md  STORY-014.done.md  STORY-015.done.md
test-applications/: md2html.py
workspace/: CLAUDE.md  md2html.py  md2pdf.py  md_to_epub.py  requirements.txt  royal-game-of-ur.html  virtual-cat-pet.html
workspace/md-to-html/: md_to_html.py  test_e2e.py  test_parser.py
workspace/tests/: decay-engine.test.js  test_decay_engine.py  test_md_to_epub.py  test_story001_scaffold.py  test_story002_block_parser.py  test_story003_embed_image.py  (+11 more)
