[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "momo-agents"
version = "0.1.0"
description = "Multi-agent coding pipeline powered by Claude Code"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "anyio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
